package bridge;

/**
 * The class Red color.
 * 红色
 *
 * @author GungnirLaevatain
 * @version 2019 -06-05 23:35:05
 * @since JDK 11
 */
public class RedColor implements Color {
    /**
     * Gets color.
     * 获取颜色
     *
     * @return the color
     * @author GungnirLaevatain
     */
    @Override
    public String getColor() {
        return "red";
    }
}
