package bridge;

/**
 * The class White color.
 * 白色
 *
 * @author GungnirLaevatain
 * @version 2019 -06-05 23:35:45
 * @since JDK 11
 */
public class WhiteColor implements Color {
    /**
     * Gets color.
     * 获取颜色
     *
     * @return the color
     * @author GungnirLaevatain
     */
    @Override
    public String getColor() {
        return "white";
    }
}
