package bridge;

/**
 * The class Color.
 * 颜色接口
 *
 * @author GungnirLaevatain
 * @version 2019 -06-05 23:34:35
 * @since JDK 11
 */
public interface Color {

    /**
     * Gets color.
     * 获取颜色
     *
     * @return the color
     * @author GungnirLaevatain
     */
    String getColor();
}
